--- a/src/main/java/com/thebuzzmedia/foursquare/hack/ui/MainFrame.form
+++ b/src/main/java/com/thebuzzmedia/foursquare/hack/ui/MainFrame.form
@@ -139,35 +139,41 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" attributes="0">
+              <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="longLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="venueIDLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="latLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="privateCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="venueIDTextField" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="longLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="venueIDLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="latLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Component id="venueIDTextField" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Component id="venueHelpLabel" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <Component id="latTextField" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="longTextField" alignment="0" min="-2" max="-2" attributes="0"/>
+                          </Group>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="venueHelpLabel" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="longHelpLabel" min="-2" max="-2" attributes="0"/>
+                              <Component id="latHelpLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
-                      <Component id="latTextField" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="longTextField" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="longHelpLabel" min="-2" max="-2" attributes="0"/>
-                      <Component id="latHelpLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <EmptySpace pref="147" max="32767" attributes="0"/>
+                  <EmptySpace pref="155" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
+                  <Component id="privateCheckBox" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
@@ -200,6 +206,13 @@
         </DimensionLayout>
       </Layout>
       <SubComponents>
+        <Component class="javax.swing.JCheckBox" name="privateCheckBox">
+          <Properties>
+            <Property name="selected" type="boolean" value="true"/>
+            <Property name="text" type="java.lang.String" value="Private Check-in (Do not share with friends)"/>
+            <Property name="toolTipText" type="java.lang.String" value="Check this to perform a private check-in that does not notify your friends."/>
+          </Properties>
+        </Component>
         <Component class="javax.swing.JLabel" name="venueIDLabel">
           <Properties>
             <Property name="text" type="java.lang.String" value="Venue ID"/>
