--- a/src/main/java/com/thebuzzmedia/foursquare/hack/ui/MainFrame.form
+++ b/src/main/java/com/thebuzzmedia/foursquare/hack/ui/MainFrame.form
@@ -8,7 +8,7 @@
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
-    <SyntheticProperty name="formSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,44,0,0,1,-96"/>
+    <SyntheticProperty name="formSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,84,0,0,1,-96"/>
     <SyntheticProperty name="formSizePolicy" type="int" value="0"/>
     <SyntheticProperty name="generateSize" type="boolean" value="true"/>
     <SyntheticProperty name="generateCenter" type="boolean" value="true"/>
@@ -148,19 +148,22 @@
                               <Component id="longLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="venueIDLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="latLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="shoutLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="venueIDTextField" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Component id="venueHelpLabel" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <Component id="latTextField" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="longTextField" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="latTextField" alignment="0" max="32767" attributes="1"/>
+                              <Component id="longTextField" alignment="0" max="32767" attributes="1"/>
+                              <Component id="shoutTextField" alignment="0" max="32767" attributes="1"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="shoutHelpLabel" min="-2" max="-2" attributes="0"/>
                               <Component id="longHelpLabel" min="-2" max="-2" attributes="0"/>
                               <Component id="latHelpLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
@@ -199,6 +202,14 @@
                           <Component id="longTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Component id="longHelpLabel" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                          <Component id="shoutTextField" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="shoutLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <Component id="shoutHelpLabel" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -265,6 +276,21 @@
               <Image iconType="3" name="/com/thebuzzmedia/foursquare/hack/resources/help-icon-16x16.png"/>
             </Property>
             <Property name="toolTipText" type="java.lang.String" value="Center the location you want on Google Maps, then check the &quot;link&quot; URL for the &apos;sll&apos; value to get LAT/LONG (in that order)"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="shoutLabel">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Message"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JTextField" name="shoutTextField">
+        </Component>
+        <Component class="javax.swing.JLabel" name="shoutHelpLabel">
+          <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/com/thebuzzmedia/foursquare/hack/resources/help-icon-16x16.png"/>
+            </Property>
+            <Property name="toolTipText" type="java.lang.String" value="Message that will be included along with your check-in."/>
           </Properties>
         </Component>
       </SubComponents>
